<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.ylagr</groupId>
    <artifactId>java-meta-test-25</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.ylagr</groupId>
            <artifactId>java-meta-processor-later</artifactId>
            <version>1.0</version>
            <!--            <scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>

                    <annotationProcessors>
                        <annotationProcessor>io.github.ylagr.javameta.processor.MetaGenerateProcessor</annotationProcessor>
                    </annotationProcessors>
                    <!--                    <compilerArgs>&#45;&#45;enable-preview-->
                    <!--                    </compilerArgs>-->
                    <!--                    <source>16</source>-->
                    <!--                    <target>16</target>-->
                    <compilerArgs>

                        <!-- 解决访问 javac 内部 API 的问题 -->
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.api=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.file=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.main=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.model=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.parser=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.processing=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.tree=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.util=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.code=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.comp=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-opens</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.jvm=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.api=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.file=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.main=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.model=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.parser=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.processing=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.tree=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.util=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.code=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.comp=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                        <arg>--add-exports</arg>
                        <arg>
                            jdk.compiler/com.sun.tools.javac.jvm=UNNAMED,ALL-UNNAMED,io.github.ylagr.javameta,java.meta.processor
                        </arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>